force-app/main/default/objects/BudgetPlanning__c/BudgetPlanning__c.object-meta.xml
<CustomObject>
    <label>Budget Planning</label>
    <nameField>
        <displayFormat>BP-{00000000}</displayFormat>
        <label>Budget Planning Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget Plannings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>