force-app/main/default/objects/BudgetPlanning__c/fields/Account_Comarch__c.field-meta.xml
<CustomField>
    <fullName>Account_Comarch__c</fullName>
    <formula>Account__r.ComarchAccountNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Comarch</label>
    <type>Text</type>
</CustomField>