force-app/main/default/objects/BudgetPlanning__c/fields/Alu__c.field-meta.xml
<CustomField>
    <fullName>Alu__c</fullName>
    <description>Alu THERM+</description>
    <label>Alu</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>