force-app/main/default/objects/BudgetPlanning__c/fields/Budget_Group__c.field-meta.xml
<CustomField>
    <fullName>Budget_Group__c</fullName>
    <formula>Account__r.Representative_Budget_Group__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Group</label>
    <type>Text</type>
</CustomField>