force-app/main/default/objects/BudgetPlanning__c/fields/ELEMENT__c.field-meta.xml
<CustomField>
    <fullName>ELEMENT__c</fullName>
    <label>ELEMENT+</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>