force-app/main/default/objects/BudgetPlanning__c/fields/FE__c.field-meta.xml
<CustomField>
    <fullName>FE__c</fullName>
    <label>FE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>