force-app/main/default/objects/BudgetPlanning__c/fields/FRAME__c.field-meta.xml
<CustomField>
    <fullName>FRAME__c</fullName>
    <label>FRAME+</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>