force-app/main/default/objects/BudgetPlanning__c/fields/Holz__c.field-meta.xml
<CustomField>
    <fullName>Holz__c</fullName>
    <description>THERM+ Holz</description>
    <label>Holz</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>