force-app/main/default/objects/BudgetPlanning__c/fields/Representative_ID__c.field-meta.xml
<CustomField>
    <fullName>Representative_ID__c</fullName>
    <formula>Account__r.Representative_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vertreter</label>
    <type>Text</type>
</CustomField>