force-app/main/default/objects/BudgetPlanning__c/fields/Representative_name__c.field-meta.xml
<CustomField>
    <fullName>Representative_name__c</fullName>
    <formula>Account__r.Representative_name__c</formula>
    <label>Vertretername</label>
    <type>Text</type>
</CustomField>