force-app/main/default/objects/BudgetPlanning__c/fields/Stahl__c.field-meta.xml
<CustomField>
    <fullName>Stahl__c</fullName>
    <description>THERM+ Stahl</description>
    <label>Stahl</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>