force-app/main/default/objects/BudgetPlanning__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Once submitted, the record can no longer be edited</description>
    <inlineHelpText>Once submitted, the record can no longer be edited</inlineHelpText>
    <label>Budget Report Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>