force-app/main/default/objects/BudgetPlanning__c/fields/THERM__c.field-meta.xml
<CustomField>
    <fullName>THERM__c</fullName>
    <label>THERM+</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>