force-app/main/default/objects/BudgetPlanning__c/fields/THERM_Total__c.field-meta.xml
<CustomField>
    <fullName>THERM_Total__c</fullName>
    <formula>Alu__c  +  Holz__c  +  Stahl__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Produktgruppen THERM+ Alu / THERM+ Holz / THERM+ Stahl</inlineHelpText>
    <label>THERM+ Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>