force-app/main/default/objects/BudgetPlanning__c/fields/vorjahr__c.field-meta.xml
<CustomField>
    <fullName>vorjahr__c</fullName>
    <inlineHelpText>Umsatz Vorjahr</inlineHelpText>
    <label>last year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>