force-app/main/default/objects/BudgetPlanning__c/fields/x2yearsago__c.field-meta.xml
<CustomField>
    <fullName>x2yearsago__c</fullName>
    <description>Revenue 2 years ago</description>
    <inlineHelpText>Umsatz vor 2 Jahren</inlineHelpText>
    <label>2 years ago</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>