force-app/main/default/objects/BudgetPlanning__c/fields/x3yearsago__c.field-meta.xml
<CustomField>
    <fullName>x3yearsago__c</fullName>
    <description>Revenue 3 years ago</description>
    <inlineHelpText>Umsatz vor 3 Jahren</inlineHelpText>
    <label>3 years ago</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>