force-app/main/default/objects/BudgetPlanning__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <label>Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2024</fullName>
                <label>2023/24</label>
            </value>
            <value>
                <fullName>2025</fullName>
                <label>2024/25</label>
            </value>
            <value>
                <fullName>2026</fullName>
                <label>2025/26</label>
            </value>
            <value>
                <fullName>2027</fullName>
                <label>2026/27</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>