force-app/main/default/objects/BudgetPlanning__c/listViews/BudgetPlanung2024_25.listView-meta.xml
<ListView>
    <fullName>BudgetPlanung2024_25</fullName>
    <columns>Account__c</columns>
    <columns>Year__c</columns>
    <columns>Alu__c</columns>
    <columns>Holz__c</columns>
    <columns>Stahl__c</columns>
    <columns>THERM_Total__c</columns>
    <columns>FRAME__c</columns>
    <columns>FE__c</columns>
    <columns>ELEMENT__c</columns>
    <columns>Total__c</columns>
    <columns>Representative_ID__c</columns>
    <columns>Representative_name__c</columns>
    <columns>vorjahr__c</columns>
    <columns>x2yearsago__c</columns>
    <columns>x3yearsago__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Year__c</field>
        <operation>equals</operation>
        <value>2025</value>
    </filters>
    <label>Budget Planungen 2024/25</label>
</ListView>